# Velloraq

./: .dockerignore  .env.example  .env.local.example  .env.production.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LEGAL_NOTICE.md  LICENSE  NOTICE.md  README.md  SECURITY.md  config.example.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: velloraq-security-scan.yml
app/: README.md  __init__.py  main.py
app/api/: __init__.py
app/auth/: __init__.py
app/core/: __init__.py
app/database/: __init__.py
app/models/: __init__.py
app/scanner/: __init__.py
app/services/: __init__.py
app/workers/: __init__.py
docker/: backend.Dockerfile  worker.Dockerfile
docs/: api.md  architecture.md  branding.md  cli.md  configuration.md  deployment.md  installation.md  reports.md  security-model.md  troubleshooting.md
examples/: requirements-vulnerable.txt  sample_plugin.py  sample_report.json  vulnerable_lambda.py
scripts/: run_api.cmd  run_api.ps1  run_api.sh  run_worker.cmd  run_worker.ps1  run_worker.sh  test.cmd
serverless_security_scanner/: README.md  __init__.py  __main__.py  cli.py  config.py  dashboard.py  models.py
serverless_security_scanner/integrations/: __init__.py
serverless_security_scanner/plugins/: __init__.py
serverless_security_scanner/reporters/: __init__.py
serverless_security_scanner/rules/: __init__.py
serverless_security_scanner/scanner/: __init__.py
tests/: test_cli_smoke.py  test_config.py  test_report_endpoints.py  test_rules.py
velloraq/: README.md  __init__.py  __main__.py
velloraq/backend/: __init__.py  api_server.py  main.py
velloraq/backend/api/: __init__.py  routes_auth.py  routes_projects.py  routes_scans.py  routes_system.py  schemas.py
velloraq/backend/auth/: __init__.py  create_admin.py  dependencies.py  security.py
velloraq/backend/core/: __init__.py  config.py  rate_limit.py
velloraq/backend/database/: __init__.py  init_db.py  migrate.py  session.py
velloraq/backend/models/: __init__.py  entities.py
velloraq/backend/scanner/: __init__.py  adapter.py
velloraq/backend/schemas/: __init__.py  api.py
velloraq/backend/services/: __init__.py  project_service.py  (+3 more)
velloraq/cli/: __init__.py  entrypoint.py
velloraq/core/: __init__.py  config_files.py
velloraq/frontend/: __init__.py  app.js  index.html  styles.css
velloraq/integrations/: __init__.py  aws.py  azure.py  base.py  gcp.py  nvd.py  redaction.py  source.py
velloraq/plugins/: __init__.py  loader.py
velloraq/rules/: __init__.py  aws.py  azure.py  base.py  dependencies.py  gcp.py  helpers.py  registry.py  source.py
velloraq/scanner/: __init__.py  engine.py  models.py  rule_engine.py
(+3 files in other folders)
